--- a/index.html
+++ b/index.html
@@ -14,8 +14,29 @@
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
 
-<body>
-    Hello
+<body class="[font-family:'Manrope',serif]">
+    <main>
+        <!-- class="max-w-screen-sm md:max-w-screen-md lg:max-w-screen-lg xl:max-w-screen-xl" -->
+        <div class="container mx-auto mt-16 grid grid-cols-2 border">
+            <div>
+                <h1 class="text-7xl text-[#1C1C1C] font-semibold mb-8">It's good<br>tea time at<br>The Tea House</h1>
+                <p class="text-lg text-[#777777] font-medium mb-8">Tea and Botanical Solutions Supplier Give
+                    Optimum<br>Satisfaction To Your Taste Buds.</p>
+                <button
+                    class="bg-gradient-to-r from-[#FF8938] to-[#FF0000] text-white px-4 py-5 rounded-lg font-bold">Explore More <i class="fa-solid fa-arrow-right -rotate-45"></i></button>
+            </div>
+            <div class="relative">
+                <img src="images/banner.png" alt="">
+                <div class="flex items-center gap-3 bg-white drop-shadow-lg rounded-xl px-7 py-4 absolute bottom-2 left-20">
+                    <i class="fa-solid fa-star text-yellow-400"></i>
+                    <div>
+                        <h3 class="font-extrabold text-3xl text-[#1C1C1C]">5.00</h3>
+                        <p class="font-semibold text-base text-[#777777]">Trust Pilot Ratings</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </main>
 </body>
 
 </html>
