featured section complete

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body class="[font-family:'Manrope',serif]">
     <main>
         <!-- class="max-w-screen-sm md:max-w-screen-md lg:max-w-screen-lg xl:max-w-screen-xl" -->
-        <div class="container mx-auto mt-16 grid grid-cols-2 border">
+        <div id="banner" class="container mx-auto mt-16 grid grid-cols-2 border">
             <div>
                 <h1 class="text-7xl text-[#1C1C1C] font-semibold mb-8">It's good<br>tea time at<br>The Tea House</h1>
                 <p class="text-lg text-[#777777] font-medium mb-8">Tea and Botanical Solutions Supplier Give
@@ -33,6 +33,32 @@
                         <h3 class="font-extrabold text-3xl text-[#1C1C1C]">5.00</h3>
                         <p class="font-semibold text-base text-[#777777]">Trust Pilot Ratings</p>
                     </div>
+                </div>
+            </div>
+        </div>
+        <div id="featured" class="container mx-auto mt-36 border">
+            <h2 class="text-center text-5xl font-extrabold text-[#1C1C1C]">Our Featured Products</h2>
+            <p class="text-center text-base font-medium text-[#777777] max-w-4xl mx-auto mt-5">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. </p>
+            <div class="mt-12 grid grid-cols-4 space-x-6">
+                <div class="px-7 py-8 bg-gradient-to-b from-[#F4F4F4] to-[#F4F4F400] rounded-xl flex flex-col items-center">
+                    <img src="/images/tea-1.png" alt="">
+                    <h4 class="text-2xl font-extrabold text-[#1C1C1C] mt-8">Milk Tea</h4>
+                    <p class="text-base font-semibold text-[#777777] text-center mt-3">Creamer could be replaced by fresh milk</p>
+                </div>
+                <div class="px-7 py-8 bg-gradient-to-b from-[#F4F4F4] to-[#F4F4F400] rounded-xl flex flex-col items-center">
+                    <img src="/images/tea-2.png" alt="">
+                    <h4 class="text-2xl font-extrabold text-[#1C1C1C] mt-8">Black Tea</h4>
+                    <p class="text-base font-semibold text-[#777777] text-center mt-3">Creamer could be replaced by fresh milk</p>
+                </div>
+                <div class="px-7 py-8 bg-gradient-to-b from-[#F4F4F4] to-[#F4F4F400] rounded-xl flex flex-col items-center">
+                    <img src="/images/tea-3.png" alt="">
+                    <h4 class="text-2xl font-extrabold text-[#1C1C1C] mt-8">Lemon Tea</h4>
+                    <p class="text-base font-semibold text-[#777777] text-center mt-3">Creamer could be replaced by fresh milk</p>
+                </div>
+                <div class="px-7 py-8 bg-gradient-to-b from-[#F4F4F4] to-[#F4F4F400] rounded-xl flex flex-col items-center">
+                    <img src="/images/tea-4.png" alt="">
+                    <h4 class="text-2xl font-extrabold text-[#1C1C1C] mt-8">Green Tea</h4>
+                    <p class="text-base font-semibold text-[#777777] text-center mt-3">Creamer could be replaced by fresh milk</p>
                 </div>
             </div>
         </div>
