--- a/index.html
+++ b/index.html
@@ -41,22 +41,22 @@
             <p class="text-center text-base font-medium text-[#777777] max-w-4xl mx-auto mt-5">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. </p>
             <div class="mt-12 grid grid-cols-4 space-x-6">
                 <div class="px-7 py-8 bg-gradient-to-b from-[#F4F4F4] to-[#F4F4F400] rounded-xl flex flex-col items-center">
-                    <img src="/images/tea-1.png" alt="">
+                    <img src="images/tea-1.png" alt="">
                     <h4 class="text-2xl font-extrabold text-[#1C1C1C] mt-8">Milk Tea</h4>
                     <p class="text-base font-semibold text-[#777777] text-center mt-3">Creamer could be replaced by fresh milk</p>
                 </div>
                 <div class="px-7 py-8 bg-gradient-to-b from-[#F4F4F4] to-[#F4F4F400] rounded-xl flex flex-col items-center">
-                    <img src="/images/tea-2.png" alt="">
+                    <img src="images/tea-2.png" alt="">
                     <h4 class="text-2xl font-extrabold text-[#1C1C1C] mt-8">Black Tea</h4>
                     <p class="text-base font-semibold text-[#777777] text-center mt-3">Creamer could be replaced by fresh milk</p>
                 </div>
                 <div class="px-7 py-8 bg-gradient-to-b from-[#F4F4F4] to-[#F4F4F400] rounded-xl flex flex-col items-center">
-                    <img src="/images/tea-3.png" alt="">
+                    <img src="images/tea-3.png" alt="">
                     <h4 class="text-2xl font-extrabold text-[#1C1C1C] mt-8">Lemon Tea</h4>
                     <p class="text-base font-semibold text-[#777777] text-center mt-3">Creamer could be replaced by fresh milk</p>
                 </div>
                 <div class="px-7 py-8 bg-gradient-to-b from-[#F4F4F4] to-[#F4F4F400] rounded-xl flex flex-col items-center">
-                    <img src="/images/tea-4.png" alt="">
+                    <img src="images/tea-4.png" alt="">
                     <h4 class="text-2xl font-extrabold text-[#1C1C1C] mt-8">Green Tea</h4>
                     <p class="text-base font-semibold text-[#777777] text-center mt-3">Creamer could be replaced by fresh milk</p>
                 </div>
