--- a/index.html
+++ b/index.html
@@ -62,6 +62,32 @@
                 </div>
             </div>
         </div>
+        <div id="great" class="container mx-auto mt-36 border grid grid-cols-2 gap-12">
+            <div class="grid grid-rows-3 grid-cols-2 gap-7">
+                <div class="bg-gradient-to-r from-[#ff633873] to-[#ff88383d] rounded-xl"></div>
+                <div class="row-span-2 bg-[rgba(230,166,35,0.1)] rounded-xl pt-14 pb-8">
+                    <img src="images/fresh-1.png" alt="" class="mx-auto">
+                </div>
+                <div class="row-span-2 bg-[rgba(87,118,57,0.1)] rounded-xl pt-14 pb-8">
+                    <img src="images/fresh-2.png" alt="" class="mx-auto">
+                </div>
+                <div class="bg-gradient-to-r from-[#D9D9D9] to-[#fefefe] rounded-xl"></div>
+            </div>
+            <div class="flex flex-col justify-center">
+                <h1 class="text-5xl font-extrabold text-[#1C1C1C] ">Great Tea, Freshly<br>Presented</h1>
+                <p class="text-base font-medium text-[#777777] mt-5">The meaning of gong cha is chanese is to provide the best tea to emperor from all possessions . It represents the highest quality and self expectation. Establishing in 2006, Gong cha had been deeply appreciated by its custoers  because of good words of mouth and unique customized service orginated from Taiwan.</p>
+                <h4 class="text-xl font-semibold text-[#1C1C1C] mt-7">Unique Taste</h4>
+                <p class="text- font- text-[#777777] mt-3">A Unique and different style from other teapots gives a luxurious and minimalist impression</p>
+                <h4 class="text-xl font-semibold text-[#1C1C1C] mt-5">Premium Quality</h4>
+                <p class="text- font- text-[#777777] mt-3">Premium Quality that makes tea more elegant and more durable when you use it.</p>
+            </div>
+        </div>
+        <div id="super" class="container mx-auto mt-36 border">
+
+        </div>
+        <div id="news" class="container mx-auto mt-36 border">
+
+        </div>
     </main>
 </body>
 
