--- a/index.html
+++ b/index.html
@@ -17,17 +17,19 @@
 <body class="[font-family:'Manrope',serif]">
     <main>
         <!-- class="max-w-screen-sm md:max-w-screen-md lg:max-w-screen-lg xl:max-w-screen-xl" -->
-        <div id="banner" class="container mx-auto mt-16 grid grid-cols-2 border">
+        <div id="banner" class="container mx-auto mt-16 flex flex-col lg:grid lg:grid-cols-2">
             <div>
                 <h1 class="text-7xl text-[#1C1C1C] font-semibold mb-8">It's good<br>tea time at<br>The Tea House</h1>
                 <p class="text-lg text-[#777777] font-medium mb-8">Tea and Botanical Solutions Supplier Give
                     Optimum<br>Satisfaction To Your Taste Buds.</p>
                 <button
-                    class="bg-gradient-to-r from-[#FF8938] to-[#FF0000] text-white px-4 py-5 rounded-lg font-bold">Explore More <i class="fa-solid fa-arrow-right -rotate-45"></i></button>
+                    class="bg-gradient-to-r from-[#FF8938] to-[#FF0000] text-white px-4 py-5 rounded-lg font-bold">Explore
+                    More <i class="fa-solid fa-arrow-right -rotate-45"></i></button>
             </div>
             <div class="relative">
                 <img src="images/banner.png" alt="">
-                <div class="flex items-center gap-3 bg-white drop-shadow-lg rounded-xl px-7 py-4 absolute bottom-2 left-20">
+                <div
+                    class="flex items-center gap-3 bg-white drop-shadow-lg rounded-xl px-7 py-4 absolute bottom-2 left-20">
                     <i class="fa-solid fa-star text-yellow-400"></i>
                     <div>
                         <h3 class="font-extrabold text-3xl text-[#1C1C1C]">5.00</h3>
@@ -36,33 +38,43 @@
                 </div>
             </div>
         </div>
-        <div id="featured" class="container mx-auto mt-36 border">
+        <div id="featured" class="container mx-auto mt-36">
             <h2 class="text-center text-5xl font-extrabold text-[#1C1C1C]">Our Featured Products</h2>
-            <p class="text-center text-base font-medium text-[#777777] max-w-4xl mx-auto mt-5">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. </p>
-            <div class="mt-12 grid grid-cols-4 space-x-6">
-                <div class="px-7 py-8 bg-gradient-to-b from-[#F4F4F4] to-[#F4F4F400] rounded-xl flex flex-col items-center">
+            <p class="text-center text-base font-medium text-[#777777] max-w-4xl mx-auto mt-5">There are many variations
+                of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by
+                injected humour, or randomised words which don't look even slightly believable. </p>
+            <div class="mt-12 grid grid-rows-4 lg:grid-cols-4 space-x-6">
+                <div
+                    class="px-7 py-8 bg-gradient-to-b from-[#F4F4F4] to-[#F4F4F400] rounded-xl flex flex-col items-center">
                     <img src="images/tea-1.png" alt="">
                     <h4 class="text-2xl font-extrabold text-[#1C1C1C] mt-8">Milk Tea</h4>
-                    <p class="text-base font-semibold text-[#777777] text-center mt-3">Creamer could be replaced by fresh milk</p>
+                    <p class="text-base font-semibold text-[#777777] text-center mt-3">Creamer could be replaced by
+                        fresh milk</p>
                 </div>
-                <div class="px-7 py-8 bg-gradient-to-b from-[#F4F4F4] to-[#F4F4F400] rounded-xl flex flex-col items-center">
+                <div
+                    class="px-7 py-8 bg-gradient-to-b from-[#F4F4F4] to-[#F4F4F400] rounded-xl flex flex-col items-center">
                     <img src="images/tea-2.png" alt="">
                     <h4 class="text-2xl font-extrabold text-[#1C1C1C] mt-8">Black Tea</h4>
-                    <p class="text-base font-semibold text-[#777777] text-center mt-3">Creamer could be replaced by fresh milk</p>
+                    <p class="text-base font-semibold text-[#777777] text-center mt-3">Creamer could be replaced by
+                        fresh milk</p>
                 </div>
-                <div class="px-7 py-8 bg-gradient-to-b from-[#F4F4F4] to-[#F4F4F400] rounded-xl flex flex-col items-center">
+                <div
+                    class="px-7 py-8 bg-gradient-to-b from-[#F4F4F4] to-[#F4F4F400] rounded-xl flex flex-col items-center">
                     <img src="images/tea-3.png" alt="">
                     <h4 class="text-2xl font-extrabold text-[#1C1C1C] mt-8">Lemon Tea</h4>
-                    <p class="text-base font-semibold text-[#777777] text-center mt-3">Creamer could be replaced by fresh milk</p>
+                    <p class="text-base font-semibold text-[#777777] text-center mt-3">Creamer could be replaced by
+                        fresh milk</p>
                 </div>
-                <div class="px-7 py-8 bg-gradient-to-b from-[#F4F4F4] to-[#F4F4F400] rounded-xl flex flex-col items-center">
+                <div
+                    class="px-7 py-8 bg-gradient-to-b from-[#F4F4F4] to-[#F4F4F400] rounded-xl flex flex-col items-center">
                     <img src="images/tea-4.png" alt="">
                     <h4 class="text-2xl font-extrabold text-[#1C1C1C] mt-8">Green Tea</h4>
-                    <p class="text-base font-semibold text-[#777777] text-center mt-3">Creamer could be replaced by fresh milk</p>
+                    <p class="text-base font-semibold text-[#777777] text-center mt-3">Creamer could be replaced by
+                        fresh milk</p>
                 </div>
             </div>
         </div>
-        <div id="great" class="container mx-auto mt-36 border grid grid-cols-2 gap-12">
+        <div id="great" class="container mx-auto mt-36 grid grid-rows-2 lg:grid-cols-2 gap-12">
             <div class="grid grid-rows-3 grid-cols-2 gap-7">
                 <div class="bg-gradient-to-r from-[#ff633873] to-[#ff88383d] rounded-xl"></div>
                 <div class="row-span-2 bg-[rgba(230,166,35,0.1)] rounded-xl pt-14 pb-8">
@@ -75,20 +87,153 @@
             </div>
             <div class="flex flex-col justify-center">
                 <h1 class="text-5xl font-extrabold text-[#1C1C1C] ">Great Tea, Freshly<br>Presented</h1>
-                <p class="text-base font-medium text-[#777777] mt-5">The meaning of gong cha is chanese is to provide the best tea to emperor from all possessions . It represents the highest quality and self expectation. Establishing in 2006, Gong cha had been deeply appreciated by its custoers  because of good words of mouth and unique customized service orginated from Taiwan.</p>
+                <p class="text-base font-medium text-[#777777] mt-5">The meaning of gong cha is chanese is to provide
+                    the best tea to emperor from all possessions . It represents the highest quality and self
+                    expectation. Establishing in 2006, Gong cha had been deeply appreciated by its custoers because of
+                    good words of mouth and unique customized service orginated from Taiwan.</p>
                 <h4 class="text-xl font-semibold text-[#1C1C1C] mt-7">Unique Taste</h4>
-                <p class="text- font- text-[#777777] mt-3">A Unique and different style from other teapots gives a luxurious and minimalist impression</p>
+                <p class="text- font- text-[#777777] mt-3">A Unique and different style from other teapots gives a
+                    luxurious and minimalist impression</p>
                 <h4 class="text-xl font-semibold text-[#1C1C1C] mt-5">Premium Quality</h4>
-                <p class="text- font- text-[#777777] mt-3">Premium Quality that makes tea more elegant and more durable when you use it.</p>
+                <p class="text- font- text-[#777777] mt-3">Premium Quality that makes tea more elegant and more durable
+                    when you use it.</p>
             </div>
         </div>
-        <div id="super" class="container mx-auto mt-36 border">
-
+        <div id="super-client"
+            class="container mx-auto mt-36 rounded-xl bg-gradient-to-r from-[#FF8938] to-[#FF0000] px-16 py-20 flex flex-col lg:flex-row gap-16">
+            <div class="w-[45%] my-auto text-white">
+                <h1 class="font-extrabold text-5xl">Meet Our Super<br>Clients</h1>
+                <p class="font-medium text-base mt-5">There are many variations of passages of Lorem Ipsum available,
+                    but the majority have suffered alteration in some form, by injected humour, or randomised words
+                    which don't look even slightly believable. </p>
+                <button class="font-bold text-xl mt-8 px-6 py-3 text-orange-500 bg-white rounded-lg">Show All</button>
+            </div>
+            <div class="relative space-y-12">
+                <div class="bg-white w-[65%] relative rounded-lg left-[40%] opacity-40">
+                    <div class="absolute -top-6 -left-6 bg-white rounded-full"><img class="p-1" src="images/client.png"
+                            alt=""></div>
+                    <div class="pl-11 pt-11 pr-9 pb-8">
+                        <p class="text-[#777777] font-normal text-base">We are providing the best and suitable home
+                            insurance services for the people who are interested to treatment</p>
+                        <h4 class="text-[#1C1C1C] font-bold text-base mt-5">Ilham Yuda</h4>
+                        <p class="text-[#626262] font-medium text-base">Businessman</p>
+                    </div>
+                </div>
+                <div class="absolute top-[20%] z-10">
+                    <div class="bg-white w-[65%] relative rounded-lg">
+                        <div class="absolute -top-6 -left-6 bg-white rounded-full"><img class="p-1"
+                                src="images/client.png" alt=""></div>
+                        <div class="pl-11 pt-11 pr-9 pb-8">
+                            <p class="text-[#777777] font-normal text-base">We are providing the best and suitable home
+                                insurance services for the people who are interested to treatment</p>
+                            <h4 class="text-[#1C1C1C] font-bold text-base mt-5">Ilham Yuda</h4>
+                            <p class="text-[#626262] font-medium text-base">Businessman</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="bg-white w-[65%] relative rounded-lg left-[40%] opacity-40">
+                    <div class="absolute -top-6 -left-6 bg-white rounded-full"><img class="p-1" src="images/client.png"
+                            alt=""></div>
+                    <div class="pl-11 pt-11 pr-9 pb-8">
+                        <p class="text-[#777777] font-normal text-base">We are providing the best and suitable home
+                            insurance services for the people who are interested to treatment</p>
+                        <h4 class="text-[#1C1C1C] font-bold text-base mt-5">Ilham Yuda</h4>
+                        <p class="text-[#626262] font-medium text-base">Businessman</p>
+                    </div>
+                </div>
+            </div>
         </div>
-        <div id="news" class="container mx-auto mt-36 border">
-
+        <div id="news" class="container mx-auto mt-36">
+            <h1 class="text-center text-5xl font-extrabold">News & Events</h1>
+            <p class="text-center font-medium text-[#777777] mt-5 mb-12 w-[85%] mx-auto">There are many variations of
+                passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected
+                humour, or randomised words which don't look even slightly believable. </p>
+            <div class="flex flex-col lg:flex-row justify-between gap-6">
+                <div class="p-5 rounded-lg border">
+                    <img src="images/news-1.png" alt="" class="rounded-lg mx-auto">
+                    <p class="font-medium text-[#777777] mt-4 mb-3">Feb 05, 2027</p>
+                    <h3 class="text-xl font-extrabold mb-3 w-[80%]">Collecting 8 points for discount</h3>
+                    <p class="font-medium text-[#777777] mb-3">There are many variations of passages of Lorem Ipsum
+                        available.</p>
+                    <p class="font-bold">Learn More</p>
+                </div>
+                <div class="p-5 rounded-lg border">
+                    <img src="images/news-1.png" alt="" class="rounded-lg mx-auto">
+                    <p class="font-medium text-[#777777] mt-4 mb-3">Feb 05, 2027</p>
+                    <h3 class="text-xl font-extrabold mb-3 w-[80%]">Collecting 8 points for discount</h3>
+                    <p class="font-medium text-[#777777] mb-3">There are many variations of passages of Lorem Ipsum
+                        available.</p>
+                    <p class="font-bold">Learn More</p>
+                </div>
+                <div class="p-5 rounded-lg border">
+                    <img src="images/news-1.png" alt="" class="rounded-lg mx-auto">
+                    <p class="font-medium text-[#777777] mt-4 mb-3">Feb 05, 2027</p>
+                    <h3 class="text-xl font-extrabold mb-3 w-[80%]">Collecting 8 points for discount</h3>
+                    <p class="font-medium text-[#777777] mb-3">There are many variations of passages of Lorem Ipsum
+                        available.</p>
+                    <p class="font-bold">Learn More</p>
+                </div>
+            </div>
         </div>
     </main>
+    <footer class="mt-36 bg-gradient-to-r from-[rgba(255,137,56,.1)] to-[rgba(255,0,0,.1)]">
+        <div class="container mx-auto py-32">
+            <div class="flex mb-24 items-center justify-between">
+                <img src="images/cup.png" alt="" class="">
+                <div class="flex items-center justify-between gap-10">
+                    <p class="text-xl font-medium text-[#777777]">Ready to get started?</p>
+                    <button
+                        class="text-xl font-bold px-6 py-3 rounded-lg bg-gradient-to-r from-[#FF8938] to-[#FF0000] text-white">Get
+                        Started</button>
+                </div>
+            </div>
+            <div class="flex flex-col lg:flex-row justify-between mb-14">
+                <div class="c">
+                    <h3 class="font-semibold text-xl">Quick Links</h3>
+                    <div class="text-[#494949] mt-5 flex flex-col gap-4">
+                        <p class="c">Home</p>
+                        <p class="c">About Us</p>
+                        <p class="c">Insurance</p>
+                        <p class="c">Privacy Policy</p>
+                    </div>
+                </div>
+                <div class="c">
+                    <h3 class="font-semibold text-xl">Our Service</h3>
+                    <div class="text-[#494949] mt-5 flex flex-col gap-4">
+                        <p class="c">Life Insurance</p>
+                        <p class="c">Car Insurance</p>
+                        <p class="c">Health Insurance</p>
+                        <p class="c">House Insurance</p>
+                    </div>
+                </div>
+                <div class="c">
+                    <h3 class="font-semibold text-xl">Help</h3>
+                    <div class="text-[#494949] mt-5 flex flex-col gap-4">
+                        <p class="c">FAQs</p>
+                        <p class="c">Contact Us</p>
+                    </div>
+                </div>
+                <div class="c">
+                    <h2 class="font-semibold text-2xl">Subscribe to our newsletter</h2>
+                    <div class="mt-10">
+                        <input type="text" name="" id=""
+                            class="text-sm text-[#494949] pb-6 bg-transparent border-b-2 border-slate-600 w-[80%]"
+                            placeholder="Email address">
+                        <i
+                            class="fa-solid fa-chevron-right bg-gradient-to-r from-[#FF8938] to-[#FF0000] py-2 px-3 rounded-full text-white"></i>
+                    </div>
+                    <div class="mt-12 flex gap-6 text-slate-700">
+                        <i class="fa-brands fa-facebook w-6 h-6"></i>
+                        <i class="fa-brands fa-square-x-twitter w-6 h-6"></i>
+                        <i class="fa-brands fa-instagram w-6 h-6"></i>
+                    </div>
+                </div>
+            </div>
+            <div>
+                <p class="font-medium text-[#494949] text-center">© 2027 UIDesign.to - All rights reserved.</p>
+            </div>
+        </div>
+    </footer>
 </body>
 
 </html>
