--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <p class="text-center text-base font-medium text-[#777777] max-w-4xl mx-auto mt-5">There are many variations
                 of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by
                 injected humour, or randomised words which don't look even slightly believable. </p>
-            <div class="mt-12 grid grid-rows-4 lg:grid-cols-4 space-x-6">
+            <div class="mt-12 grid grid-rows-4 lg:flex space-x-6">
                 <div
                     class="px-7 py-8 bg-gradient-to-b from-[#F4F4F4] to-[#F4F4F400] rounded-xl flex flex-col items-center">
                     <img src="images/tea-1.png" alt="">
@@ -74,7 +74,7 @@
                 </div>
             </div>
         </div>
-        <div id="great" class="container mx-auto mt-36 grid grid-rows-2 lg:grid-cols-2 gap-12">
+        <div id="great" class="container mx-auto mt-36 grid grid-rows-2 lg:grid lg:grid-rows-1 lg:grid-cols-2 gap-12">
             <div class="grid grid-rows-3 grid-cols-2 gap-7">
                 <div class="bg-gradient-to-r from-[#ff633873] to-[#ff88383d] rounded-xl"></div>
                 <div class="row-span-2 bg-[rgba(230,166,35,0.1)] rounded-xl pt-14 pb-8">
